[project]
name = "netmiko-mcp-server"
version = "0.1.0"
description = "MCP server for netmiko (SSH/Telnet)"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]",
  "netmiko",
  "starlette",
  "uvicorn",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
