[project]
name = "netmiko-mcp-server"
version = "0.1.0"
description = "MCP server for netmiko (SSH/Telnet)"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "cryptography",
  "mcp[cli]",
  "netmiko",
  "starlette",
  "uvicorn",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "netmiko.*"
ignore_missing_imports = true
